# mergics

./: .mergify.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  flake.nix  manage.py  pyproject.toml
.github/workflows/: main.yml
mergics/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
mergics/migrations/: 0001_initial.py  0002_alter_icsinput_id_alter_icsoutput_id.py  0003_icsoutput_filtre.py  0004_rename_filtre_icsoutput_filter.py
mergics/templates/mergics/: icsinput_list.html  icsoutput_detail.html  icsoutput_list.html
testproject/: asgi.py  settings.py  urls.py
testproject/templates/: base.html  index.html
