[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
known_django = "django"
profile = "black"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.poetry]
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
description = "Merge multiple ICS streams"
license = "BSD-2-Clause"
name = "mergics"
version = "0.1.0"

[tool.poetry.dependencies]
gunicorn = "^21.2.0"
icalendar = "^5.0.11"
ipython = "^8.18.1"
ndh = "^6.5.3"
python = "^3.10"
redis = "^5.0.1"
requests = "^2.31.0"
yeouia = "^4.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.6"

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn = "^21.2.0"
psycopg2 = "^2.9.9"

[tool.tomlsort]
all = true
