[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
description = "Merge multiple ICS streams"
license = "BSD-2-Clause"
name = "mergics"
version = "0.1.0"

[tool.poetry.dependencies]
gunicorn = "^21.2.0"
icalendar = "^5.0.12"
ipython = "^8.23.0"
ndh = "^6.9.1"
python = "^3.10"
redis = "^5.0.4"
requests = "^2.31.0"
yeouia = "^4.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn = "^21.2.0"
psycopg2 = "^2.9.9"

[tool.ruff]
extend-exclude = ["migrations"]
target-version = "py310"

[tool.ruff.lint]
extend-select = ["A", "B", "C", "COM", "DJ", "EM", "EXE", "G", "I", "N", "PTH", "RET", "RUF", "UP", "W", "YTT"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]
sections.django = ["django"]
